SensorFaceController: use a separate QQmlEngine in createConfigUi

Config UI was using same engine as the applet, so it would inherit the
colors wrongly from the Plasma Theme instead of the standard color
scheme. This caused issues in mixed light/dark global themes.

Fix it by creating a new engine just for the config windows.

BUG: 483689
FIXED-IN: 6.0.5


(cherry picked from commit 3ffd61ba57ef690a78eccded055083d6aa4ead44)

754f64a8 SensorFaceController: createConfigUi creates its own QQmlEngine
50262dad Rename to configEngine
168aca46 Add original engine as parent for the configEngine